first cut at schedule section, need to center calendar

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -29,16 +29,51 @@
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <div class="large-icon"><i class="fa fa-calendar"></i></div>
           <h2>Schedule</h2>
-					<p>
-						Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that will be accepted. A team status report is less likely to be accepted than a collaborative team working session or a workshop.
-					</p>
-					<p>
-						The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
-					</p>
-					<h4>Our CFP is open from May 1 - June 1, 2017.</h4>
-					<h4><a href="#">Submit your session proposal now.</a></h4>
+          <h3>Schedule</h3>
+          <p>
+            Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that will be accepted. A team status report is less likely to be accepted than a collaborative team working session or a workshop.
+          </p>
+          <p>
+            The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
+          </p>
+          <h4>Our CFP is open from May 1 - June 1, 2017.</h4>
+          <h4><a href="#">Submit your session proposal now.</a></h4>
+          <h3>Dates</h3>
+          <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.
+            <table class="calendar">
+              <tr>
+                <th>Sat</th>
+                <th>Sun</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Wed</th>
+                <th>Thu</th>
+                <th>Fri</th>
+                <th>Sat</th>
+                <th>Sun</th>
+              </tr>
+              <tr class="flock">
+                <td></td>
+                <td></td>
+                <td></td>
+                <td class="flock" colspan="4">Flock</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Aug <span>26</span></td>
+                <td>Aug <span>27</span></td>
+                <td>Aug <span>28</span></td>
+                <td class="flock">Aug <span>29</span></td>
+                <td class="flock">Aug <span>30</span></td>
+                <td class="flock">Aug <span>31</span></td>
+                <td class="flock">Sep <span>01</span></td>
+                <td>Sep <span>02</span></td>
+                <td>Sep <span>03</span></td>
+              </tr>
+            </table>
+          </p>
         </div>
       </div>
     </div>
