adding new blue class, adding cols to social

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -40,8 +40,8 @@
           <h4>Our CFP is open from May 1 - June 1, 2017.</h4>
           <h4><a href="#">Submit your session proposal now.</a></h4>
           <h3>Dates</h3>
-          <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.
-            <table class="calendar">
+          <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.</p>
+          <table class="calendar">
               <tr>
                 <th>Sat</th>
                 <th>Sun</th>
@@ -73,37 +73,37 @@
                 <td>Sep <span>03</span></td>
               </tr>
             </table>
-          </p>
         </div>
       </div>
     </div>
     </div>
 
-    <div id="comms" class="non-jumbo blue text-center">
+    <div id="comms" class="non-jumbo light-blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <div class="large-icon"><i class="fa fa-comments-o"></i></div>
           <h2>Social</h2>
-          <br/>
-          <h3>Mailing List</h3>
-          <p>
-            The <a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Flock attendees 2017 mailing list</a> is the primary means of communication for attendees of Flock. If you register for Flock, you will be subscribed to this list.
-          </p>
-					<ul>
-						<li><a href="https://lists.fedoraproject.org/accounts/signup/?next=/archives/">Subscribe now.</a></li>
-						<li><a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Read list postings now.</a></li>
-					</ul>
-          <hr/>
-          <h3>IRC</h3>
-          <p>
-            Our main IRC channel for the event is <a href="https://webchat.freenode.net/?channels=#fedora-flock">#fedora-flock</a> on <strong>irc.freenode.net</strong>. Each session room also has a dedicated channel in IRC, and some sessions will be transcribed there.
-          </p>
-					<ul>
-						<li><a href="https://webchat.freenode.net/?channels=#fedora-flock">Join #fedora-flock now.</a></li>
-						<li><a href="#">View full list of Flock channels.</a></li>
-					</ul>
-          <hr/>
+            <div class="col-xs-12 col-sm-6">
+              <h3>Mailing List</h3>
+              <p>
+                The <a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Flock attendees 2017 mailing list</a> is the primary means of communication for attendees of Flock. If you register for Flock, you will be subscribed to this list.
+              </p>
+              <ul>
+                <li><a href="https://lists.fedoraproject.org/accounts/signup/?next=/archives/">Subscribe now.</a></li>
+                <li><a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Read list postings now.</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h3>IRC</h3>
+              <p>
+                Our main IRC channel for the event is <a href="https://webchat.freenode.net/?channels=#fedora-flock">#fedora-flock</a> on <strong>irc.freenode.net</strong>. Each session room also has a dedicated channel in IRC, and some sessions will be transcribed there.
+              </p>
+              <ul>
+                <li><a href="https://webchat.freenode.net/?channels=#fedora-flock">Join #fedora-flock now.</a></li>
+                <li><a href="#">View full list of Flock channels.</a></li>
+              </ul>
+          </div>
+          <br />
           <h3>Telegram</h3>
           <p>
             Telegram channel TBA
@@ -113,30 +113,30 @@
     </div>
     </div>
 
-    <div id="transport" class="non-jumbo text-center">
+    <div id="transport" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-bus"></i></div>
           <h2>Transportation</h2><b4/>
-					<p>
-						There are many transportation options to get to, from, and around Hyannis and Cape Cod.
-					</p>
-					<p>
-						The closest international airport is <strong>Logan International Airport in Boston, MA.</strong>
-					</p>
-					<p>
-						The <strong>Plymouth &amp; Brockton bus line</strong> has a direct bus from Logan to the <strong>Hyannis Transportation Center</strong>; it is a 2-hour trip one-way.
-					</p>
-					<p>
-						Here is a <a href="#">detailed overview of transportation options</a>.
-					</p>
+          <p>
+          There are many transportation options to get to, from, and around Hyannis and Cape Cod.
+          </p>
+          <p>
+            The closest international airport is <strong>Logan International Airport in Boston, MA.</strong>
+          </p>
+          <p>
+            The <strong>Plymouth &amp; Brockton bus line</strong> has a direct bus from Logan to the <strong>Hyannis Transportation Center</strong>; it is a 2-hour trip one-way.
+          </p>
+          <p>
+            Here is a <a href="#">detailed overview of transportation options</a>.
+          </p>
         </div>
       </div>
     </div>
     </div>
 
-    <div id="venue" class="non-jumbo blue text-center">
+    <div id="venue" class="non-jumbo light-blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -165,7 +165,7 @@
     </div>
     </div>
 
-    <div id="sponsors" class="non-jumbo blue text-center">
+    <div id="sponsors" class="non-jumbo light-blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
