--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -30,16 +30,16 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Schedule</h2>
-          <h3>Schedule</h3>
+          <h3>Call for Proposals</h3>
           <p>
             Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that will be accepted. A team status report is less likely to be accepted than a collaborative team working session or a workshop.
           </p>
           <p>
             The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
           </p>
-          <h4>Our CFP is open from May 1 - June 1, 2017.</h4>
-          <h4><a href="#">Submit your session proposal now.</a></h4>
-          <h3>Dates</h3>
+          <h4 style="font-style: italic;">Our CFP will open soon. Check back here for updates.</h4>
+          <!-- <h4><a href="#">Submit your session proposal now.</a></h4> -->
+          <h3>Event Dates</h3>
           <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.</p>
           <table class="calendar">
               <tr>
@@ -100,7 +100,7 @@
               </p>
               <ul>
                 <li><a href="https://webchat.freenode.net/?channels=#fedora-flock">Join #fedora-flock now.</a></li>
-                <li><a href="#">View full list of Flock channels.</a></li>
+                <!-- fixme <li><a href="#">View full list of Flock channels.</a></li> -->
               </ul>
           </div>
           <br />
@@ -117,43 +117,57 @@
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <div class="large-icon"><i class="fa fa-bus"></i></div>
-          <h2>Transportation</h2><b4/>
-          <p>
-          There are many transportation options to get to, from, and around Hyannis and Cape Cod.
-          </p>
-          <p>
+          <!--<div class="large-icon"><i class="fa fa-bus"></i></div>-->
+          <h2>Transportation</h2>
+          <div class="col-xs-12 col-sm-7">
+            <img src="/static/images/map-capecod.png" style="max-width: 100%;"/>
+            <p style="font-size: xx-small;">Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under ODbL</p>
+          </div>
+          <div class="col-xs-12 col-sm-5">
+            <p>
+            There are many transportation options to get to, from, and around Hyannis and Cape Cod.
+            </p>
+            <p>
             The closest international airport is <strong>Logan International Airport in Boston, MA.</strong>
-          </p>
-          <p>
+            </p>
+            <p>
             The <strong>Plymouth &amp; Brockton bus line</strong> has a direct bus from Logan to the <strong>Hyannis Transportation Center</strong>; it is a 2-hour trip one-way.
-          </p>
-          <p>
-            Here is a <a href="#">detailed overview of transportation options</a>.
-          </p>
+            </p>
+            <p>
+            Here is a <a href="https://fedoraproject.org/wiki/Flock2017-CapeCod-proposal#Travel_Summary">detailed overview of transportation options</a>.
+            </p>
+          </div>
         </div>
       </div>
     </div>
     </div>
 
-    <div id="venue" class="non-jumbo light-blue text-center">
+    <div id="venue" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <div class="large-icon"><i class="fa fa-building"></i></div>
           <h2>Venue and Hotel</h2>
-          <p>
-            The Resort and Conference Center at Hyannis<br/>
-						35 Scudder Avenue, Hyannis, Massachusetts USA 02601<br/>
-						+1 (866) 828-8259<br/>
-						<a href="mailto:info@capecodresortandconference.com">info@capecodresortandconference.com</a>
-          </p>
+          <div class="col-xs-12 col-md-7">
+          <p>The Resort and Conference Center at Hyannis is both the conference venue as well as the conference hotel.</p>
+          <p>Our negotiated room rate during Flock is $139/night per double, queen, or king room (11.7% tax applies.) You will need to use a special code to book your room at the Flock rate (we will announce this code shortly. Watch this space.)</p>
+          <p>If you receive financial assistance to attend Flock, the organizers will book your lodging for you. If you are booking your own lodging at the hotel, please book before July 26, at which point our reserved blocks will open up to the public.</p>
+          <img src="/static/images/capecod_hotel_thumbs.png" style="width: 100%;" />
+          </div>
+          <div class="col-xs-12 col-md-5">
+          <img src="/static/images/capecod_hotel.png" style="width: 100%;" />
+          <address>
+            <h4>The Resort and Conference Center at Hyannis</h4>
+            35 Scudder Avenue, Hyannis, Massachusetts USA 02601<br/>
+            +1 (866) 828-8259<br/>
+            <a href="mailto:info@capecodresortandconference.com">info@capecodresortandconference.com</a>
+          </address>
+          </div>
         </div>
       </div>
     </div>
     </div>
 
-    <div id="events" class="non-jumbo text-center">
+    <div id="events" class="non-jumbo light-blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -165,31 +179,32 @@
     </div>
     </div>
 
-    <div id="sponsors" class="non-jumbo light-blue text-center">
+    <div id="sponsors" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-credit-card"></i></div>
           <h2>Sponsors</h2><br/>
           <p>
-						Sponsorship opportunities are still open. For information, contact <a href="mailto:flockinfo@fedoraproject.org">flockinfo@fedoraproject.org</a>.
-					</p>
-					<br/>
-					<h3>Platinum Level</h3>
-					<p>
-						<a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
-					</p>
-					<br/>
-					<h3>Gold Level</h3>
-					<p>
-					</p>
-					<br/>
-					<h3>Bronze Level</h3>
-					<p>
-					</p>
-				</div>
+            Sponsorship opportunities are still open. For information, contact <a href="mailto:flockinfo@fedoraproject.org">flockinfo@fedoraproject.org</a>.
+          </p>
+          <br/>
+          <h3>Platinum Level</h3>
+          <p>
+            <a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
+          </p>
+          <br/>
+          <h3>Gold Level</h3>
+          <p>
+          </p>
+          <br/>
+          <h3>Bronze Level</h3>
+          <p>
+          </p>
+        </div>
       </div>
-			</div>
+      </div>
+      <hr />
     </div>
 
   </body>
