centering telegram block

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -103,11 +103,14 @@
                 <!-- fixme <li><a href="#">View full list of Flock channels.</a></li> -->
               </ul>
           </div>
-          <br />
+          <div class="row">
+            <div class="col-xs-12" id="telegram">
           <h3>Telegram</h3>
           <p>
             Telegram channel TBA
           </p>
+          </div>
+          </div>
         </div>
       </div>
     </div>
