updating subscribe link to point to list signup

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -89,7 +89,7 @@
                 The <a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Flock attendees 2017 mailing list</a> is the primary means of communication for attendees of Flock. If you register for Flock, you will be subscribed to this list.
               </p>
               <ul>
-                <li><a href="https://lists.fedoraproject.org/accounts/signup/?next=/archives/">Subscribe now.</a></li>
+                <li><a href="https://lists.fedoraproject.org/accounts/signup/?next=/admin/lists/flock-attendees-2017.lists.fedoraproject.org/">Subscribe now.</a></li>
                 <li><a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Read list postings now.</a></li>
               </ul>
             </div>
