adding links for hotel info - link to map and link to hotel website

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -123,7 +123,7 @@
           <!--<div class="large-icon"><i class="fa fa-bus"></i></div>-->
           <h2>Transportation</h2>
           <div class="col-xs-12 col-sm-7">
-            <img src="/static/images/map-capecod.png" style="max-width: 100%;"/>
+            <a href="http://www.openstreetmap.org/search?query=35%20Scudder%20Avenue%2C%20Hyannis%2C%20Massachusetts#map=17/41.64539/-70.29640"><img src="/static/images/map-capecod.png" style="max-width: 100%;"/></a>
             <p style="font-size: xx-small;">Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under ODbL</p>
           </div>
           <div class="col-xs-12 col-sm-5">
@@ -151,7 +151,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Venue and Hotel</h2>
           <div class="col-xs-12 col-md-7">
-          <p>The Resort and Conference Center at Hyannis is both the conference venue as well as the conference hotel.</p>
+          <p><a href="http://www.capecodresortandconferencecenter.com/">The Resort and Conference Center at Hyannis</a> is both the conference venue as well as the conference hotel.</p>
           <p>Our negotiated room rate during Flock is $139/night per double, queen, or king room (11.7% tax applies.) You will need to use a special code to book your room at the Flock rate (we will announce this code shortly. Watch this space.)</p>
           <p>If you receive financial assistance to attend Flock, the organizers will book your lodging for you. If you are booking your own lodging at the hotel, please book before July 26, at which point our reserved blocks will open up to the public.</p>
           <img src="/static/images/capecod_hotel_thumbs.png" style="width: 100%;" />
@@ -159,7 +159,7 @@
           <div class="col-xs-12 col-md-5">
           <img src="/static/images/capecod_hotel.png" style="width: 100%;" />
           <address>
-            <h4>The Resort and Conference Center at Hyannis</h4>
+            <h4><a href="http://www.capecodresortandconferencecenter.com/">The Resort and Conference Center at Hyannis</a></h4>
             35 Scudder Avenue, Hyannis, Massachusetts USA 02601<br/>
             +1 (866) 828-8259<br/>
             <a href="mailto:info@capecodresortandconference.com">info@capecodresortandconference.com</a>
