adding link to register and opening up CFP

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -37,8 +37,9 @@
           <p>
             The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
           </p>
-          <h4 style="font-style: italic;">Our CFP will open soon. Check back here for updates.</h4>
-          <!-- <h4><a href="#">Submit your session proposal now.</a></h4> -->
+          <h4>Our CFP is now open!</h4>
+          <h4 style="margin-top: 50px; margin-bottom: 50px;"><a href="http://register.flocktofedora.org">Propose a session now</a>.</h4>
+          <p>Our CFP for session proposals will be open until <mark>June 15, 2017</mark>.</p>
           <h3>Event Dates</h3>
           <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.</p>
           <table class="calendar">
