#668 set up firefox as default browser in the XFCE spin page

--- a/spins.fedoraproject.org/data/content/xfce/index.html
+++ b/spins.fedoraproject.org/data/content/xfce/index.html
@@ -51,9 +51,9 @@
           <p>${_('Just a click and you\'re connected to your wireless LAN router, or online via many supported 3G mobile broadband cards.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/xfce/midori.png" alt="Midori" />
-          <h4>${_('Midori')}</h4>
-          <p>${_('A lightweight and full featured web browser using GTK+2 and WebKit. Surf the web with speed and simplicity.')}</p>
+          <img src="${path}/static/images/xfce/firefox.png" alt="Firefox" />
+          <h4>${_('Firefox')}</h4>
+          <p>${_('The most popular fully open-source web browser, made by Mozilla. Customize it with useful add-ons.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <img src="${path}/static/images/xfce/pidgin.png" alt="Pidgin" />
