atomic: fixup the comment about testing.
Fixes #670

--- a/getfedora.org/data/content/atomic/download/index.html
+++ b/getfedora.org/data/content/atomic/download/index.html
@@ -46,7 +46,7 @@
       <div class="row top-margin">
           <div class="col-xs-12">
               <h2 class="cloudy">${_('Atomic Host Images')}</h2>
-              <p>${_('Fedora Atomic Host is a leading edge base operating system following the Project Atomic model. It is designed around Kubernetes and Docker containers. The images published here showcase that work. Note that the images have passed several levels of automated testing, but are not always subjected to.')}</p>
+              <p>${_('Fedora Atomic Host is a leading edge base operating system following the Project Atomic model. It is designed around Kubernetes and containers. The images published here showcase that work. Note that the images have passed several levels of automated testing.')}</p>
               <ul>
               <li>${Markup(_('&lt;strong&gt;Please test before using new versions in production.&lt;/strong&gt; If you do discover a problem, the Atomic Host tools make it easy to flip back to an earlier release — and if that happens, please also help us by filing bugs or submitting fixes.'))}</li>
               <li>${Markup(_('&lt;strong&gt;Fedora Atomic Host images are updated roughly every two weeks,&lt;/strong&gt; rather than on the main six-month Fedora cadence. Because development is moving quickly, only the latest major Fedora release is supported.'))}</li>
