--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -153,9 +153,15 @@
           <h2>Venue and Hotel</h2>
           <div class="col-xs-12 col-md-7">
           <p><a href="http://www.capecodresortandconferencecenter.com/">The Resort and Conference Center at Hyannis</a> is both the conference venue as well as the conference hotel.</p>
-          <p>Our negotiated room rate during Flock is $139/night per double, queen, or king room (11.7% tax applies.) You will need to use a special code to book your room at the Flock rate (we will announce this code shortly. Watch this space.)</p>
-          <p>If you receive financial assistance to attend Flock, the organizers will book your lodging for you. If you are booking your own lodging at the hotel, please book before July 26, at which point our reserved blocks will open up to the public.</p>
+	  <ul style="padding-left: 1em;">
+            <li>A <strong>$139/night</strong>* rate per double, queen, or king room is available. You will need to use the "Group Attendee" code "FLOCK" on the <a href="https://reservations.travelclick.com/15240?hotelId=15240#/guestsandrooms">hotel reservation form</a> to book your room at the Flock rate.</li>
+	    <li>A <strong>$169/night</strong>* double occupancy (under 18 free) discounted rate is available the weekend before and the weekend after.</li>
+	    <li>If you are booking by phone, please state that you are attending the Flock 2017 Conference.</li>
+	    <li><strong>July 26</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
+	  </ul>
+	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your lodging for you.</p> 
           <img src="/static/images/capecod_hotel_thumbs.png" style="width: 100%;" />
+	  <p><em>* 11.7% lodging tax applies.</em></p>
           </div>
           <div class="col-xs-12 col-md-5">
           <img src="/static/images/capecod_hotel.png" style="width: 100%;" />
