getfedora.org: Fix old "Cloud" text (fixes: #676)

--- a/getfedora.org/data/content/atomic/index.html
+++ b/getfedora.org/data/content/atomic/index.html
@@ -127,7 +127,7 @@
 
   <!-- Download jumbo for mobile -->
   <div class="jumbotron download-lower visible-xs">
-    <h3>${_('Ready to give Fedora Cloud a try?')}</h3>
+    <h3>${_('Ready to give Fedora Atomic a try?')}</h3>
     <p><a class="btn btn-visible-xs" href="./download/" role="button">${_('Download now')}</a></p>
   </div>
 
