CFP is closed; updating

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -30,16 +30,13 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Schedule</h2>
-          <h3>Call for Proposals</h3>
           <p>
             Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that will be accepted. A team status report is less likely to be accepted than a collaborative team working session or a workshop.
           </p>
           <p>
-            The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
+            We will be announcing the list of accepted proposals soon. The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
           </p>
-          <h4>Our CFP is now open!</h4>
-          <h4 style="margin-top: 50px; margin-bottom: 50px;"><a href="http://register.flocktofedora.org">Propose a session now</a>.</h4>
-          <p>Our CFP for session proposals will be open until <mark>June 15, 2017</mark>.</p>
+	  <p>Our CFP for session proposals closed on June 15, 2017. However, <mark>registration remains open!</mark> <a href="http://register.flocktofedora.org">Register now</a> - you are welcome to register to attend whether or not you have proposed a session.</p>
           <h3>Event Dates</h3>
           <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.</p>
           <table class="calendar">
