Hotel reservation charges one night as deposit
Signed-off-by: Stephen Gallagher <sgallagh@redhat.com>

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -154,6 +154,7 @@
             <li>A <strong>$139/night</strong>* rate per double, queen, or king room is available. You will need to use the "Group Attendee" code "FLOCK" on the <a href="https://reservations.travelclick.com/15240?hotelId=15240#/guestsandrooms">hotel reservation form</a> to book your room at the Flock rate.</li>
 	    <li>A <strong>$169/night</strong>* double occupancy (under 18 free) discounted rate is available the weekend before and the weekend after.</li>
 	    <li>If you are booking by phone, please state that you are attending the Flock 2017 Conference.</li>
+	    <li>The Cape Cod Resort and Conference Center will charge your credit card immediately for one night as a deposit which will be applied to the last night of your stay. The remainder of the charges will be paid at checkout.</li>
 	    <li><strong>July 26</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
 	  </ul>
 	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your lodging for you.</p> 
