#636 WIP for the new LXQt spin page

--- a/spins.fedoraproject.org/data/content/index.html
+++ b/spins.fedoraproject.org/data/content/index.html
@@ -123,6 +123,20 @@
        </div>
 
        <div class="high">
+        <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 text-center top-space">
+            <a href="/${lang}/lxqt"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-lxqt.jpg" alt="LXQt Screenshot" /></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 text-center">
+            <p class="screenshot bottom-border"><a href="/${lang}/lxqt"><img class="spin-banner" src="${path}/static/images/lxqt-banner.png" alt="LXQt banner" /></a><br />
+            <span class="grey">${_('A lightweight, well-integrated LXQt desktop environment.')}</span></p>
+          </div>
+        </div>
+       </div>
+
+       <div class="high">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
     	  	  <a href="/${lang}/soas"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-soas.jpg" alt="SoaS Screenshot" /></a>
