--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../templates/master.html" />
   <head>
-    <title>${_('Fedora LXQT Desktop')}</title>
+    <title>${_('Fedora LXQt Desktop')}</title>
   </head>
   <body>
 
@@ -18,7 +18,7 @@
     <div class="container product-feature">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 text-justify top-space bottom-space">
-          <p>${_('Fedora LXQt provides a lightweight, well-integrated LXQt desktop environment. In addition to LXQt itself it provides a small, well selected collection of applications like the QupZilla browser, which combines Chromium s rendering engine with a nice Qt experience. Other applications include the Trojita mail client, the qBittorrent client, the Yarock music player and a set of some more commonly used applications. As all applications use the same Qt5 toolkit and the Breeze theme known from KDE, the desktop provides a unified and well-integrated style and theming. In addition breeze-gtk is provided to allow the user to integrate GTK applications too.')}</p>
+          <p>${_('Fedora LXQt provides a lightweight, well-integrated LXQt desktop environment. In addition to LXQt itself it provides a small, well selected collection of applications like the QupZilla browser, which combines Chromium\'s rendering engine with a nice Qt experience. Other applications include the Trojita mail client, the qBittorrent client, the Yarock music player and a set of some more commonly used applications. As all applications use the same Qt5 toolkit and the Breeze theme known from KDE, the desktop provides a unified and well-integrated style and theming. In addition breeze-gtk is provided to allow the user to integrate GTK applications too.')}</p>
         </div>
       </div>
     </div>
@@ -45,24 +45,24 @@
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxde/sylpheed.png" alt="Sylpheed" />
-          <h4>${_('Sylpheed')}</h4>
-          <p>${_('Sylpheed is a simple, lightweight but featureful, and easy-to-use e-mail client.')}</p>
+          <img src="${path}/static/images/lxqt/trojita.png" alt="Trojita" />
+          <h4>${_('Trojita')}</h4>
+          <p>${_('A fast Qt IMAP e-mail client developed using the Qt C++ library.')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxde/midori.png" alt="Midori" />
-          <h4>${_('Midori')}</h4>
-          <p>${_('A lightweight and full featured web browser using GTK+2 and WebKit. Surf the web with speed and simplicity.')}</p>
+          <img src="${path}/static/images/lxqt/qupzilla.png" alt="QupZilla" />
+          <h4>${_('QupZilla')}</h4>
+          <p>${_('A lightweight multiplatform web browser written in Qt Framework and using its web rendering engine QtWebEngine.')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxde/pidgin.png" alt="Pidgin" />
-          <h4>${_('Pidgin')}</h4>
-          <p>${_('Universal messaging client. Communicate with the world via IRC, AIM, MSN, Yahoo and other instant messaging systems.')}</p>
+          <img src="${path}/static/images/lxqt/yarock.png" alt="Yarock" />
+          <h4>${_('Yarock')}</h4>
+          <p>${_('Yarock is Qt4/Qt5 Modern Music Player designed to provide an easy and pretty music collection browser based on cover art.')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxde/transmission.png" alt="Transmission" />
-          <h4>${Markup(_('Transmission'))}</h4>
-          <p>${_('Are you a downloader? Use Transmission to get new versions of Fedora LXDE Desktop!')}</p>
+          <img src="${path}/static/images/lxqt/qbittorrent.png" alt="qBittorrent" />
+          <h4>${Markup(_('qBittorrent'))}</h4>
+          <p>${_('The qBittorrent project aims to provide an open-source software alternative to µTorrent.')}</p>
         </div>
       </div>
     </div>
@@ -150,11 +150,11 @@
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#lxde&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=lxde'))}</p>
+          <p>${Markup(_('General help is available in &lt;a href="%s"&gt;#fedora-lxqt&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-lxqt'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;lxde@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/lxde'))}</p>
+          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;lxqt@lists.fedoraproject.org&lt;/a&gt;.') % ('https://lists.fedoraproject.org/archives/list/lxqt@lists.fedoraproject.org/'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
