--- a/spins.fedoraproject.org/data/content/lxqt/download/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/download/index.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../../templates/master.html" />
   <head>
-    <title>${_('Download Fedora LXQT Desktop')}</title>
+    <title>${_('Download Fedora LXQt Desktop')}</title>
   </head>
 
 <body id="spins">
@@ -16,8 +16,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left">
-          <h2>${Markup(_('Download Fedora %(rel)s LXQT Desktop')) % {'rel':global_variables.release['curr_id']}}</h2>
-            <p class="gr"><a class="btn btn-success lxde-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/x86_64/iso/Fedora-LXDE-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
+          <h2>${Markup(_('Download Fedora %(rel)s LXQt Desktop')) % {'rel':global_variables.release['curr_id']}}</h2>
+            <p class="gr"><a class="btn btn-success lxdqt-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/x86_64/iso/Fedora-LXQt-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
             <h5>${Markup(_('%s MB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_LXDE']}</h5>
         </div>
       </div>
@@ -27,7 +27,7 @@
   <div class="row">
     <div class="col-md-8 text-left bottom-space">
         <h3>${_('What is a Live image?')}</h3>
-        <p>${_('Fedora LXDE Desktop is shipped as a live operating system. It\'s everything you need to try out Fedora\'s LXDE Desktop - you don\'t have to erase anything on your current system to try it out, and it won\'t put your files at risk. Take Fedora for a test drive, and if you like it, you can install Fedora directly to your hard drive straight from the Live Media desktop if you like.')}</p>
+        <p>${_('Fedora LXQt Desktop is shipped as a live operating system. It\'s everything you need to try out Fedora\'s LXQt Desktop - you don\'t have to erase anything on your current system to try it out, and it won\'t put your files at risk. Take Fedora for a test drive, and if you like it, you can install Fedora directly to your hard drive straight from the Live Media desktop if you like.')}</p>
 	    <p>${_('To use this image, you need a drive that can create or "burn" DVDs, or a USB flash drive at least as big as the image.')}</p>
     </div>
     <div class="col-md-3 text-left col-md-offset-1">
@@ -149,11 +149,11 @@
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#lxde&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=lxde'))}</p>
+          <p>${Markup(_('General help is available in &lt;a href="%s"&gt;#fedora-lxqt&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-lxqt'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;lxde@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/lxde'))}</p>
+          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;lxqt@lists.fedoraproject.org&lt;/a&gt;.') % ('https://lists.fedoraproject.org/archives/list/lxqt@lists.fedoraproject.org/'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
