--- a/spins.fedoraproject.org/data/content/lxqt/download/lxqt-download-splash.html
+++ b/spins.fedoraproject.org/data/content/lxqt/download/lxqt-download-splash.html
@@ -5,11 +5,11 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../../templates/master.html" />
   <head>
-    <title>${_('Download Fedora LXDE Desktop')}</title>
+    <title>${_('Download Fedora LXQt Desktop')}</title>
   </head>
   <body>
 
-  <xi:include href="../../../templates/lxde/header.html" />
+  <xi:include href="../../../templates/lxqt/header.html" />
 
   <header class="splashheader main-head recover-heading">
     <div class="container">
