fix Mate slogan even for prerelease

--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -132,7 +132,7 @@
     	  	</div>
     	  	<div class="col-xs-12 col-sm-8 text-left">
     	  	  <p class="screenshot"><img src="${path}/static/images/mate-compiz-pre-banner.png" alt="MATE-Compiz banner" /><br />
-    	  	  <span class="grey">${_('A classic Fedora Desktop. With wobbly Windows.')}</span></p>
+    	  	  <span class="grey">${_('A classic Fedora Desktop with an additional 3D Windows Manager.')}</span></p>
     	  	  	<div class="col-xs-6 text-center">
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-MATE_Compiz-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Mate']}</h5>
