replace MATE blueman with blueberry

--- a/spins.fedoraproject.org/data/content/mate-compiz/index.html
+++ b/spins.fedoraproject.org/data/content/mate-compiz/index.html
@@ -46,9 +46,9 @@
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/mate/blueman.png" alt="Blueman" />
-          <h4>${_('Blueman')}</h4>
-          <p>${_('Blueman is designed to provide a simple yet effective means for controlling BlueZ API. It is lightweight, easy to use, Python based, and GPL licensed.')}</p>
+          <img src="${path}/static/images/mate/blueberry.png" alt="Blueberry" />
+          <h4>${_('Blueberry')}</h4>
+          <p>${_('Blueberry is a gnome-bluetooth based bluetooth configuration tool which integrates very well in almost any desktop environment.')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
           <img src="${path}/static/images/mate/firefox.png" alt="Firefox" />
