Cinnamon replace Parole with XPlayer

--- a/spins.fedoraproject.org/data/content/cinnamon/index.html
+++ b/spins.fedoraproject.org/data/content/cinnamon/index.html
@@ -111,8 +111,8 @@
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/cinnamon/parole.png" alt="Parole" />
-          <h4>${_('Parole')}</h4>
+          <img src="${path}/static/images/cinnamon/xplayer.png" alt="XPlayer" />
+          <h4>${_('XPlayer')}</h4>
           <p>${_('A modern media player, using gtk3 and the gstreamer plugin framework.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
