Cinnamon replace shotwell with pix

--- a/spins.fedoraproject.org/data/content/cinnamon/index.html
+++ b/spins.fedoraproject.org/data/content/cinnamon/index.html
@@ -116,9 +116,9 @@
           <p>${_('A modern media player, using gtk3 and the gstreamer plugin framework.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/cinnamon/shotwell.png" alt="Shotwell" />
-          <h4>${_('Shotwell')}</h4>
-          <p>${_('Shotwell is an easy-to-use, fast photo organizer, viewer, and editor.')}</p>
+          <img src="${path}/static/images/cinnamon/pix.png" alt="Pix" />
+          <h4>${_('Pix')}</h4>
+          <p>${_('Pix is an image browser, viewer, organizer and editor.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <img src="${path}/static/images/cinnamon/brasero.png" alt="Brasero" />
