shorten python-classroom multiple python title to fit our grid

--- a/labs.fedoraproject.org/data/content/python-classroom/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/index.html
@@ -69,7 +69,7 @@
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
             <img src="${path}/static/images/python-classroom/pypy.png" alt="PyPy Logo" />
-            <h4>${Markup(_('Multiple Pythons (CPython 3.6 &amp; 2.7, PyPy 3.3)'))}</h4>
+            <h4>${Markup(_('Multiple Pythons'))}</h4>
             <p>${_('Multiple implementations of the Python programming language, including CPython 3.61 2.7 and PyPy 3.3')}</p>
             <a href="https://developer.fedoraproject.org/tech/languages/python/multiple-pythons.html">${Markup(_('Learn More &gt;'))}</a>
           </div>
