--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -74,9 +74,9 @@
         <div class="col-md-6 col-xs-12 text-center greybg recover-jumbo">
           <h2>${Markup(_('Utilities &amp; Configuration'))}</h2>
 	          <div class="col-md-6 col-xs-12 text-center top-margin">
-	          <img src="${path}/static/images/lxde/lxterminal.png" alt="LXTerminal" />
-          	  <h4>${_('LXTerminal')}</h4>
-          	  <p>${_('Fedora LXDE Desktop ships a terminal, the gateway to the real power of any UNIX/linux machine, called LXTerminal.')}</p>
+	          <img src="${path}/static/images/lxde/qterminal.png" alt="QTerminal" />
+          	  <h4>${_('QTerminal')}</h4>
+          	  <p>${_('QTerminal is a lightweight Qt terminal emulator based on QTermWidget.')}</p>
 	        </div>
 	        <div class="col-md-6 col-xs-12 text-center top-margin">
 	          <img src="${path}/static/images/lxde/obconf.png" alt="ObConf" />
