add LXQt dnfdragora feature

--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -79,9 +79,9 @@
           	  <p>${_('QTerminal is a lightweight Qt terminal emulator based on QTermWidget.')}</p>
 	        </div>
 	        <div class="col-md-6 col-xs-12 text-center top-margin">
-	          <img src="${path}/static/images/lxde/obconf.png" alt="ObConf" />
-          	  <h4>${_('ObConf')}</h4>
-          	  <p>${_('ObConf easily installs new themes which use the .obt Openbox theme archive format for distribution.')}</p>
+	          <img src="${path}/static/images/lxqt/dnfdragora.png" alt="dnfdragora" />
+          	  <h4>${_('dnfdragora')}</h4>
+          	  <p>${_('dnfdragora is a DNF frontend, based on rpmdragora, written in Python 3 and uses libYui.')}</p>
 	        </div>
         </div>
         <div class="col-md-6 col-xs-12 text-center darkgreybg recover-jumbo">
