add FeatherPad to LXQt

--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -87,9 +87,9 @@
         <div class="col-md-6 col-xs-12 text-center darkgreybg recover-jumbo">
           <h2>${Markup(_('Office &amp; Productivity Suite'))}</h2>
           <div class="col-md-6 col-xs-12 text-center top-margin">
-          <img src="${path}/static/images/lxde/abiword.png" alt="AbiWord" />
-          <h4>${_('AbiWord')}</h4>
-          <p>${_('Quick and full featured word processing made easy.')}</p>
+          <img src="${path}/static/images/lxqt/featherpad.png" alt="FeatherPad" />
+          <h4>${_('FeatherPad')}</h4>
+          <p>${_('FeatherPad is a desktop indipendent and lightweight Qt5 plain-text editor for Linux.')}</p>
         </div>
         <div class="col-md-6 col-xs-12 text-center top-margin">
           <img src="${path}/static/images/lxde/osmo.png" alt="Osmo" />
