add qpdfview to LXQt

--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -92,9 +92,9 @@
           <p>${_('FeatherPad is a desktop indipendent and lightweight Qt5 plain-text editor for Linux.')}</p>
         </div>
         <div class="col-md-6 col-xs-12 text-center top-margin">
-          <img src="${path}/static/images/lxde/osmo.png" alt="Osmo" />
-          <h4>${_('Osmo')}</h4>
-          <p>${_('Osmo is a handy personal organizer, which includes calendar, tasks manager, address book and notes modules.')}</p>
+          <img src="${path}/static/images/lxqt/qpdfview.png" alt="qpdfview" />
+          <h4>${_('qpdfview')}</h4>
+          <p>${_('qpdfview is a tabbed document viewer.')}</p>
         </div>
         </div>
     </div>
